# MovieRatingProject

./: .env.example  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 12450ea7183c_add_all_models.py  6e04ab28067c_add_all_models.py  932729643686_fix_director_name_type.py  c036124fd176_fix_association.py  e85a1f338d2a_add_all_models.py  f37f94d97710_add_director_description.py  f44d2b9fe65f_add_all_models.py
app/: __init__.py  main.py
app/api/v1/: __init__.py  router.py
app/api/v1/controllers/: __init__.py  movie.py
app/api/v1/dependencies/: __init__.py  services.py
app/api/v1/schemas/requests/: __init__.py  movie.py  rating.py
app/api/v1/schemas/responses/: __init__.py  director.py  movie.py  rating.py  response.py
app/db/: session.py
app/exceptions/: __init__.py  service_exception.py
app/models/: __init__.py  associations.py  director.py  genre.py  movie.py  rating.py
app/repositories/: __init__.py  director_repository.py  genre_repository.py  movie_repository.py  rating_repository.py
app/services/: __init__.py  director_service.py  genre_service.py  movie_service.py  rating_service.py
app/utils/: logging_config.py
scripts/: seed_check.py  seeddb.sql
